--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <p>ethan-web.ga</p>
-<p>Index: |<a href="http://ethan-web.ga/NEXT-PAGE/">NEXT PAGE</a>|</p>
+<p>Index: | <a href="http://ethan-web.ga/">Home</a> | <a href="http://ethan-web.ga/NEXT-PAGE/">NEXT PAGE</a> |</p>
 <h1>Welcome to Ethan Web</h1>
 <p>EthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthan</p>
 <p>Sincerely,</p>
