--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <p>EthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthan</p>
 <p>Sincerely,</p>
 <p> - Ethan Weathers</p>
-<img src="Cybertruck.jpg"/>
+<img src="Cybertruck.jpg"><hr size=10></img>
 </body>
 </html>
