--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <p>EthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthan</p>
 <p>Sincerely,</p>
 <p> - Ethan Weathers</p>
-<img src="Cybertruck.jpg">
+<img src="Cybertruck.jpg" height=50% width=50%>
 </body>
 </html>
