--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p>ethan-web.ga</p>
-<p>Index: | <a href="http://ethan-web.ga/">Home</a> | <a href="http://ethan-web.ga/NEXT-PAGE/">NEXT PAGE</a> |</p>
-<h1>Welcome to Ethan Web</h1>
-<p>EthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthan</p>
-<p>Sincerely,</p>
-<p> - Ethan Weathers</p>
-<img src="Cybertruck.jpg" height=10% width=10%>
+<p>test</p>
 </body>
 </html>
