--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <p>ethan-web.ga</p>
-<p>Index: | <button type="button" url="http://ethan-web.ga/">Home</button> | <button type="button" url="http://ethan-web.ga/NEXT-PAGE/">NEXT PAGE</button> |</p>
+<p>Index: | <button type="button" url="http://ethan-web.ga/">Home</button> | <button type="button" href="http://ethan-web.ga/NEXT-PAGE/">NEXT PAGE</button> |</p>
 <h1>Welcome to Ethan Web</h1>
 <p>EthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthan</p>
 <p>Sincerely,</p>
