--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <p>ethan-web.ga</p>
-<p>Index: | <button type="button" url="http://ethan-web.ga/">Hom</button> | <form action="/NEXT-PAGE"><input type="submit"/></form> |</p>
+<p>Index: | <button type="button" url="http://ethan-web.ga/">Hom</button> | <form action="/NEXT-PAGE"><input type="submit">NEXT PAGE</input></form> |</p>
 <h1>Welcome to Ethan Web</h1>
 <p>EthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthan</p>
 <p>Sincerely,</p>
