--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html>
-<body>
-<p>ethan-web.ga</p>
-<p>Index: | <button type="button" url="http://ethan-web.ga/">Hom</button> | <form action="/NEXT-PAGE"><input type="submit">NEXT PAGE</input></form> |</p>
-<h1>Welcome to Ethan Web</h1>
-<p>EthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthan</p>
-<p>Sincerely,</p>
-<p> - Ethan Weathers</p>
-<img src="Cybertruck.jpg" height=10% width=10%>
-</body>
+  <body>
+    <p>
+      ethan-web.ga
+    </p>
+    
+    <p>
+      Index: | 
+      <button type="button" url="http://ethan-web.ga/">
+        Home
+      </button>
+      | 
+      <form action="/NEXT-PAGE">
+        <input type="submit" value="NEXT PAGE"/>
+      </form>
+      |
+    </p>
+  
+    <h1>
+      Welcome to Ethan Web
+    </h1>
+  
+    <p>
+      EthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthan
+    </p>
+  
+    <p>
+      Sincerely,
+    </p>
+  
+    <p>
+      - Ethan Weathers
+    </p>
+  
+    <img src="Cybertruck.jpg" height=10% width=10%>
+  
+  </body>
+
 </html>
