--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
       ethan-web.ga
     </p>
     
-    <p>
-      Index: | 
-      <button type="button" url="http://ethan-web.ga/">
-        Home
-      </button>
-      | 
-      <form action="/NEXT-PAGE">
-        <input type="submit" value="NEXT PAGE"/>
-      </form>
-      |
-    </p>
+    <div>
+      <p>
+        Index: | 
+        <button type="button" url="http://ethan-web.ga/">
+          Home
+        </button>
+        | 
+        <form action="/NEXT-PAGE">
+          <input type="submit" value="NEXT PAGE"/>
+        </form>
+        |
+      </p>
+    </div>
   
     <h1>
       Welcome to Ethan Web
