--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <div>
       <p>
         Index: | 
-        <button type="button" url="http://ethan-web.ga/">
-          Home
-        </button>
+        <form action="http://ethan-web.ga/">
+          <input type="submit" value="Home">
+        </form>
         | 
         <form action="/NEXT-PAGE">
           <input type="submit" value="NEXT PAGE"/>
