--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       ethan-web.ga
     </p>
     
-    <div>
+    <indexTop>
       <p>
         Index: | 
         <form action="http://ethan-web.ga/">
@@ -20,7 +20,7 @@
         </form>
         |
       </p>
-    </div>
+    </indexTop>
   
     <h1>
       Welcome to Ethan Web
