--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     
     <indexTop>
       <p>
-        Index: | 
-        <form action="http://ethan-web.ga/">
-          <input type="submit" value="Home">
+        <form>
+          Index: | 
+          <form action="http://ethan-web.ga/">
+            <input type="submit" value="Home">
+          </form>
+          | 
+          <form action="/NEXT-PAGE">
+            <input type="submit" value="NEXT PAGE"/>
+          </form>
+          |
         </form>
-        | 
-        <form action="/NEXT-PAGE">
-          <input type="submit" value="NEXT PAGE"/>
-        </form>
-        |
       </p>
     </indexTop>
   
