--- a/NEXT-PAGE/index.html
+++ b/NEXT-PAGE/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE HTML>
 <html>
-<body>
-<p>ethan-web.ga/NEXT-PAGE</p>
-<p>Index: | <a href="http://ethan-web.ga/">Home</a> | <a href="http://ethan-web.ga/NEXT-PAGE/">NEXT PAGE</a> |</p>
-<h1>THIS IS THE NEXT PAGE.</h1>
-</body>
+  <body>
+    <p>
+      ethan-web.ga/NEXT-PAGE
+    </p>
+    
+    <indexTop>
+      <p>
+        <form>
+          Index: | 
+          <form action="http://ethan-web.ga/">
+            <input type="submit" value="Home">
+          </form>
+          | 
+          <form action="/NEXT-PAGE">
+            <input type="submit" value="NEXT PAGE"/>
+          </form>
+          |
+        </form>
+      </p>
+    </indexTop>
+  
+    <h1>
+      THIS IS THE NEXT PAGE.
+    </h1>
+  </body>
 </html>
