--- a/NEXT-PAGE/index.html
+++ b/NEXT-PAGE/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE HTML>
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
   <body>
     <p>
       ethan-web.ga/NEXT-PAGE
