--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p>
         <form>
           Index: | 
-          <form action="ethan-web.ga/">
+          <form action="ethan-web.ga">
             <input type="submit" value="Home">
           </form>
           | 
