--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <indexTop>
       <p>
-        <form>
+        <form action="">
           Index: | 
           <form action="../">
             <input type="submit" value="Home">
