--- a/NEXT-PAGE/index.html
+++ b/NEXT-PAGE/index.html
@@ -10,17 +10,15 @@
     
     <indexTop>
       <p>
-        <form>
-          Index: | 
-          <form action="../">
-            <input type="submit" value="Home">
-          </form>
-          | 
-          <form action="/NEXT-PAGE">
-            <input type="submit" value="NEXT PAGE"/>
-          </form>
-          |
+        Index: | 
+        <form action="ethan-web.ga/">
+          <input type="submit" value="Home">
         </form>
+        | 
+        <form action="/NEXT-PAGE">
+          <input type="submit" value="NEXT PAGE"/>
+        </form>
+        |
       </p>
     </indexTop>
   
