--- a/NEXT-PAGE/index.html
+++ b/NEXT-PAGE/index.html
@@ -11,7 +11,7 @@
     <indexTop>
       <p>
         Index: | 
-        <form action="ethan-web.ga/">
+        <form action="../">
           <input type="submit" value="Home">
         </form>
         | 
