--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
       <p>
         Index: | 
         <form action="/">
-          <input type="submit" value="Home">
-        </form>
-        | 
-        <form action="/NEXT-PAGE">
-          <input type="submit" value="NEXT PAGE"/>
-        </form>
-        |
+          <input type="submit" value="Home"></form> | <form action="/NEXT-PAGE"><input type="submit" value="NEXT PAGE"/></form> |
       </p>
     </indexTop>
   
