--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <indexTop>
       <p>
         
-        <form>Index: | </form><form action="/"><input type="submit" value="Home"></form> | <form action="/NEXT-PAGE"><input type="submit" value="NEXT PAGE"/></form> |
+        <form><p>Index: | </p></form><form action="/"><input type="submit" value="Home"></form> | <form action="/NEXT-PAGE"><input type="submit" value="NEXT PAGE"/></form> |
       </p>
     
     </indexTop>
