--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       - Ethan Weathers
     </p>
   
-    <img src="Cybertruck.jpg" height=10% width=10%>
+    <img src="Cybertruck.jpg" height=10% width=10%><a href="/NEXT-PAGE" /></img>
   
   </body>
 
