--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       - Ethan Weathers
     </p>
   
-    <a href="/NEXT-PAGE"><img src="Cybertruck.jpg" height=10% width=10%></a>
+    <a href="http://cybertruckmemes.ethan-web.ga"><img src="Cybertruck.jpg" height=10% width=10%></a>
   
   </body>
 
