--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"/>
+    <script src="scripts.js"></script>
   </head>
   <body>
     <p>
