--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       Sincerely,
     </p>
   
-    <a class="hidey" onclick='console.log("Food")'>
+    <a class="hidey" onclick='console.log("Food");'>
       - Ethan Weathers
     </p>
   
