--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       Welcome to Ethan Web
     </h1>
   
-    <p>
+    <p id="hideyID">
       EthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthanEthan
     </p>
   
