--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       Sincerely,
     </p>
   
-    <a class="hidey" onclick='makeFood();'>
+    <a class="hidey" onclick='makeFood(); hideyText();'>
       - Ethan Weathers
     </p>
   
