--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
   
     <a href="http://cybertruckmemes.ethan-web.ga"><img src="Cybertruck.jpg" height=10% width=10%></a>
   
+  
+    <a href="http://emms.ethan-web.ga">E.M.M.S.; One of my other projects</a>
   </body>
 
 </html>
